--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,18 @@ services:
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
 
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    environment:
+      - CHOKIDAR_USEPOLLING=true  # Reactのライブリロード対策（Macで有効）
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules. # ここだけはDocker内に閉じておく
+
+
 volumes:
   db-data:  # ボリュームを定義し、DBデータを永続化。コンテナを消してもデータが残る。
